# aya-examples

btf-tracepoint/: Cargo.toml  README.md
btf-tracepoint/btf-tracepoint/: Cargo.toml  build.rs
btf-tracepoint/btf-tracepoint-common/: Cargo.toml
btf-tracepoint/btf-tracepoint-ebpf/: Cargo.toml
btf-tracepoint/btf-tracepoint-ebpf/src/: main.rs
btf-tracepoint/btf-tracepoint/src/: main.rs
littlelb/: Cargo.toml  README.md
littlelb/littlelb/: Cargo.toml  build.rs
littlelb/littlelb-common/: Cargo.toml
littlelb/littlelb-ebpf/: Cargo.toml
littlelb/littlelb-ebpf/src/: bindings.rs  main.rs
littlelb/littlelb/src/: main.rs
littlelb/tcp-server/: Cargo.toml
littlelb/tcp-server/src/: main.rs
loadbalancer/: Cargo.toml  README.md
loadbalancer/loadbalancer/: Cargo.toml  build.rs
loadbalancer/loadbalancer-common/: Cargo.toml
loadbalancer/loadbalancer-ebpf/: Cargo.toml
loadbalancer/loadbalancer-ebpf/src/: bindings.rs  main.rs
loadbalancer/loadbalancer/src/: main.rs
loadbalancer/udp-server/: Cargo.toml
loadbalancer/udp-server/src/: main.rs
tc-lb/: Cargo.toml  README.md
tc-lb/aya-test/: Cargo.toml  build.rs
tc-lb/aya-test-common/: Cargo.toml
tc-lb/aya-test-ebpf/: Cargo.toml
tc-lb/aya-test-ebpf/src/: main.rs
tc-lb/aya-test/src/: main.rs
tracepoint-binary-final/tracepoint-binary-ebpf/src/: common.rs  display.rs  filter.rs  hook.rs  hook_exit.rs  main.rs
tracepoint-binary-final/tracepoint-binary/src/: main.rs
tracepoint-binary-maps/: Cargo.toml
tracepoint-binary-maps/tracepoint-binary/: Cargo.toml
tracepoint-binary-maps/tracepoint-binary-ebpf/: Cargo.toml
tracepoint-binary-maps/tracepoint-binary-ebpf/src/: main.rs
tracepoint-binary-maps/tracepoint-binary/src/: constant.rs  main.rs
tracepoint-binary-multi/: Cargo.toml  README.md
tracepoint-binary-multi/multi/: Cargo.toml  build.rs
tracepoint-binary-multi/multi-common/: Cargo.toml
tracepoint-binary-multi/multi-ebpf/: Cargo.toml
tracepoint-binary-multi/multi-ebpf/src/: main.rs
tracepoint-binary-multi/multi/src/: main.rs
tracepoint-binary-tail-calls/: Cargo.toml  README.md
tracepoint-binary-tail-calls/tracepoint-binary-common/: Cargo.toml
tracepoint-binary-tail-calls/tracepoint-binary-ebpf/: Cargo.toml
tracepoint-binary-tail-calls/tracepoint-binary-ebpf/src/: common.rs  display.rs  filter.rs  helpers.rs  hook.rs  hook_enter.rs  main.rs  maps.rs
tracepoint-binary-tail-calls/tracepoint-binary/src/: main.rs
tracepoint-binary/tracepoint-binary/: build.rs
tracepoint-binary/tracepoint-binary-ebpf/src/: main.rs
tracepoint-binary/tracepoint-binary/src/: main.rs
tracepoint-test/: Cargo.toml  README.md
tracepoint-test/tracepoint-test/: Cargo.toml  build.rs
tracepoint-test/tracepoint-test-common/: Cargo.toml
tracepoint-test/tracepoint-test-ebpf/: Cargo.toml
tracepoint-test/tracepoint-test-ebpf/src/: main.rs
tracepoint-test/tracepoint-test/src/: main.rs
tracepoint-test2/: Cargo.toml  README.md
tracepoint-test2/tracepoint-test2/: Cargo.toml  build.rs
tracepoint-test2/tracepoint-test2-common/: Cargo.toml
tracepoint-test2/tracepoint-test2-ebpf/: Cargo.toml
tracepoint-test2/tracepoint-test2-ebpf/src/: bindings.rs  main.rs
tracepoint-test2/tracepoint-test2/src/: main.rs
tracepoint-test3/: Cargo.toml  README.md
tracepoint-test3/tracepoint-test3/: Cargo.toml  build.rs
tracepoint-test3/tracepoint-test3-common/: Cargo.toml
tracepoint-test3/tracepoint-test3-ebpf/: Cargo.toml
tracepoint-test3/tracepoint-test3-ebpf/src/: bindings.rs  main.rs
tracepoint-test3/tracepoint-test3/src/: main.rs
uprobe-test/: Cargo.toml  README.md
uprobe-test/uprobe-test/: Cargo.toml  build.rs
uprobe-test/uprobe-test-common/: Cargo.toml
uprobe-test/uprobe-test-ebpf/: Cargo.toml
uprobe-test/uprobe-test-ebpf/src/: main.rs
uprobe-test/uprobe-test/src/: main.rs
uretprobe-test/: Cargo.toml  README.md
uretprobe-test/uretprobe-test/: Cargo.toml  build.rs
uretprobe-test/uretprobe-test-common/: Cargo.toml
uretprobe-test/uretprobe-test-ebpf/: Cargo.toml
uretprobe-test/uretprobe-test-ebpf/src/: main.rs
uretprobe-test/uretprobe-test/src/: main.rs
