[package]
name = "btf-tracepoint-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
btf-tracepoint-common = { path = "../btf-tracepoint-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "btf-tracepoint"
path = "src/main.rs"
