[package]
name = "littlelb-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
littlelb-common = { path = "../littlelb-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "littlelb"
path = "src/main.rs"
