[package]
name = "aya-test-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-test-common = { path = "../aya-test-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.8"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "aya-test"
path = "src/main.rs"
