[package]
name = "tracepoint-binary-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
tracepoint-binary-common = { path = "../tracepoint-binary-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
aya-ebpf-bindings = "0.1.1"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "tracepoint-binary"
path = "src/main.rs"
