[package]
name = "tracepoint-test-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
tracepoint-test-common = { path = "../tracepoint-test-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "tracepoint-test"
path = "src/main.rs"
