[package]
name = "tracepoint-test2-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
tracepoint-test2-common = { path = "../tracepoint-test2-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "tracepoint-test2"
path = "src/main.rs"
