[package]
name = "tracepoint-test3-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
tracepoint-test3-common = { path = "../tracepoint-test3-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "tracepoint-test3"
path = "src/main.rs"
