[package]
name = "uprobe-test-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
uprobe-test-common = { path = "../uprobe-test-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "uprobe-test"
path = "src/main.rs"
